Fix memory leaks in glib-compile resources

Based on a patch by Josselin Mouette,
https://bugzilla.gnome.org/show_bug.cgi?id=685069